--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "navigator-cordova-jqm",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "Navigator for Cordova with jQuery Mobile. This will help you manage your pages history in the app.",
   "main": "index.js",
   "repository": {
@@ -8,37 +8,16 @@
     "url": "git+https://github.com/orchoban/cordova-jqm-navigator.git"
   },
   "keywords": [
-    "manage",
-    "pages",
-    "managePages",
+    "navigator-cordova-jqm",
+    "manage-pages",
     "historyPages",
-    "cordova",
-    "with",
+    "jQueryMobile",
+    "Cordova",
+    "Cordova-jQueryMobile",
+    "manage-pages-Cordova-jQueryMobile",
+    "historyPages-Cordova-jQueryMobile",
     "jqm",
-    "jQuery",
-    "mobile",
-    "navigator",
-    "pages",
-    "cordova",
-    "with",
-    "jqm",
-    "jQuery",
-    "mobile",
-    "history",
-    "pages",
-    "-",
-    "jqm",
-    "jQuery",
-    "momile",
-    "with",
-    "cordova",
-    "back",
-    "button",
-    "android",
-    "cordova",
-    "jqm",
-    "jQuery",
-    "mobile"
+    "back-button-android"
   ],
   "author": "Or Choban",
   "license": "ISC",
